Revert "Bug: Not showing the orders on my profile page once I finish the payment"

--- a/src/client/components/Purchases/Purchases.styles.css
+++ b/src/client/components/Purchases/Purchases.styles.css
@@ -21,9 +21,3 @@
   flex-basis: 100%;
   padding-left: 1.2em;
 }
-
-.purchases h2 {
-  text-align: left;
-  flex-basis: 100%;
-  padding-left: 1.2em;
-}
